--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "ahooks": "^3.9.6",
     "jotai": "^2.15.1",
+    "json5": "^2.2.3",
+    "json5-editor": "^1.3.9",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.16",
